@@ -1,3 +1,8 @@
+2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/community.R (walktrap.community) : added
+	* interfaces/R/src/rinterface.c (R_igraph_walktrap_community) : added
+
 2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.graphdb) :
